update docker config

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,21 @@
-ARG version
 ARG php
 
 FROM moodlehq/moodle-php-apache:$php
 
-ADD https://download.moodle.org/download.php/direct/stable30/moodle-3.0.10.tgz /var/www/html/
+ARG version
+ARG upstream
 
-WORKDIR ["/var/www/html"]
+ADD https://download.moodle.org/download.php/direct/stable${upstream}/moodle-${version}.tgz /var/www/html/
+
+ADD https://getcomposer.org/installer /var/www/html/composer-setup.php
+
+WORKDIR /var/www/html
 
 RUN cd /var/www/html && \
-    tar xfz moodle-3.0.10.tgz --strip-components=1 && \
-    rm moodle-3.0.10.tgz && \
+    tar xfz moodle-${version}.tgz --strip-components=1 && \
+    rm moodle-${version}.tgz && \
+    php composer-setup.php --install-dir=/usr/local/bin --filename=composer \
+    rm composer-setup.php \
     chown -R www-data /var/www/html
 
 VOLUME ["/var/www/html"]
